Labs done and 1 project done

--- a/PasswordStrenghtMeter2000/app/src/main/res/layout/activity_main.xml
+++ b/PasswordStrenghtMeter2000/app/src/main/res/layout/activity_main.xml
@@ -1,38 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<android.support.constraint.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.jensk.passwordstrenghtmeter2000.MainActivity">
-
+    >
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <EditText
-            android:id="@+id/password"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Password"
-            android:inputType="textVisiblePassword" />
-
-        <ProgressBar
-            android:id="@+id/progress"
-            style="?android:progressBarStyleHorizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:max="5"
-            tools:progress="1" />
-
-        <TextView
-            android:id="@+id/status"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Your password is non-existent"
-            android:textSize="20sp" />
-    </LinearLayout>
-
+    android:id="@+id/activity_main"
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent"
+    android:orientation="horizontal"
+    tools:context="com.example.jensk.passwordstrenghtmeter2000.MainActivity">
+>
+</LinearLayout>
 </android.support.constraint.ConstraintLayout>
+
