--- a/PasswordStrenghtMeter2000/app/src/main/res/layout/strenght_validator.xml
+++ b/PasswordStrenghtMeter2000/app/src/main/res/layout/strenght_validator.xml
@@ -1,22 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:paddingBottom="20dp"
+    android:paddingLeft="20dp"
+    android:paddingRight="20dp"
+    android:paddingTop="20dp"
     >
-    <ProgressBar
-        android:id="@+id/progress"
-        style="?android:progressBarStyleHorizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:max="5"
-        tools:progress="1" />
 
-    <TextView
-        android:id="@+id/status"
+    <EditText
+        android:id="@+id/password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Your password is non-existent"
-        android:textSize="20sp" />
+        android:inputType="textPassword"
+        android:maxLines="1"
+        android:singleLine="true" />
+    <ProgressBar
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:max="5"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:id="@+id/progress"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/status"/>
 </LinearLayout>
