--- a/lab1/app/src/main/res/layout/activity_lab1_bxml.xml
+++ b/lab1/app/src/main/res/layout/activity_lab1_bxml.xml
@@ -32,7 +32,8 @@
             android:layout_height="wrap_content"
             android:layout_column="0"
             android:layout_row="1"
-            android:text="Lösenord" />
+            android:text="Lösenord"
+            />
 
         <EditText
             android:id="@+id/editText5"
@@ -50,7 +51,7 @@
             android:layout_column="1"
             android:layout_row="1"
             android:ems="10"
-            android:inputType="textPersonName" />
+            android:inputType="textPassword" />
 
         <EditText
             android:id="@+id/editText7"
@@ -59,7 +60,7 @@
             android:layout_column="1"
             android:layout_row="2"
             android:ems="10"
-            android:inputType="textPersonName" />
+            android:inputType="textEmailAddress" />
 
         <SeekBar
             android:id="@+id/seekBar"
