--- a/lab1/app/src/main/res/layout/activity_lab1_bxml.xml
+++ b/lab1/app/src/main/res/layout/activity_lab1_bxml.xml
@@ -27,13 +27,12 @@
             android:text="Epost" />
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/textView7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_column="0"
             android:layout_row="1"
-            android:text="Lösenord"
-            />
+            android:text="Lösenord" />
 
         <EditText
             android:id="@+id/editText5"
@@ -77,6 +76,14 @@
             android:layout_row="24"
             android:onClick="goToNext"
             android:text="Next" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_column="0"
+            android:layout_row="3"
+            android:text="Ålder" />
 
     </GridLayout>
 </android.support.constraint.ConstraintLayout>
